Closed
Bug 729814
Opened 9 years ago
Closed 9 years ago
IonMonkey: Assertion failure: pendingNonLoopBlocks.empty(), at ion/IonAnalysis.cpp:482
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: decoder, Assigned: jandem)
References
Details
(Keywords: assertion, testcase)
Attachments
(1 file)
3.84 KB,
patch
|
dvander
:
review+
|
Details | Diff | Splinter Review |
The following testcase asserts on ionmonkey revision 5a04fd69aa09 (run with --ion -n -m --ion-eager), tested on 64 bit: out1: for (i = 0; 1; i++) if (j == 500) break out1; while (i < 1000) {}
Assignee | ||
Updated•9 years ago
|
Assignee: general → jdemooij
Status: NEW → ASSIGNED
Assignee | ||
Comment 1•9 years ago
|
||
ReorderBlocks had some problems so it could incorrectly match headers/backedges. Still not a huge fan of the code here, but this patch just makes it a bit more robust.
Attachment #601587 -
Flags: review?(dvander)
Comment on attachment 601587 [details] [diff] [review] Patch Review of attachment 601587 [details] [diff] [review]: ----------------------------------------------------------------- Yeah this function is getting pretty gross. We can worry about it later.
Attachment #601587 -
Flags: review?(dvander) → review+
Assignee | ||
Comment 3•9 years ago
|
||
https://hg.mozilla.org/projects/ionmonkey/rev/7d6da2d65595
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Reporter | ||
Comment 4•8 years ago
|
||
A testcase for this bug was automatically identified at js/src/jit-test/tests/ion/bug729814.js.
Flags: in-testsuite+
You need to log in
before you can comment on or make changes to this bug.
Description
•