Make ReorderBlocks a bit more robust (bug 729814, r=dvander)